# Operating-Systems

./: signing.sh
Black-White-Filesystem/: Proyecto_2.md
Black-White-Filesystem/proyecto2/: Cargo.toml
Black-White-Filesystem/proyecto2/src/: fsck.rs  main.rs  mkfs.rs  mount.rs
Black-White-Filesystem/proyecto2/src/data_block/: data_block.rs
Black-White-Filesystem/proyecto2/src/disk/: disk.rs
Black-White-Filesystem/proyecto2/src/encoder/: saved_disk.rs
Black-White-Filesystem/proyecto2/src/file_system/: file_system.rs
Black-White-Filesystem/proyecto2/src/i_node/: i_node.rs
Black-White-Filesystem/proyecto2/src/structure/: structure_file.rs
Multi-Display-Animator/: Cargo.toml  Proyecto_1.md  config.txt
Multi-Display-Animator/src/: animator.rs  main.rs  my_pthread.rs
Web-Server-Attack/: Documentación.md  README.md
Web-Server-Attack/client/: Cargo.toml
Web-Server-Attack/client/resources/: index.html  post_test.html
Web-Server-Attack/client/src/: main.rs
Web-Server-Attack/client/src/client/: client.rs
Web-Server-Attack/client/src/get_options/: get_optios.rs
Web-Server-Attack/kick-off/: Kick off - Sistemas Operativos.docx
Web-Server-Attack/stress-cmd/: stress.py
Web-Server-Attack/web-server/: Cargo.toml
Web-Server-Attack/web-server/resources/: index.html  not_found.html
Web-Server-Attack/web-server/src/: main.rs
Web-Server-Attack/web-server/src/get_ops/: get_options.rs
Web-Server-Attack/web-server/src/http_server/: http_handler.rs
Web-Server-Attack/web-server/src/parser/: request_parser.rs
(+2 files in other folders)
