[package]
name = "proyecto2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde-big-array = "0.4.1"
serde = { version = "1.0", features = ["derive"] }
fuse = "0.3.0"
libc = "0.2.51"
time = "0.1"
sysinfo = "0.24.5"
image = "0.23"
bincode = "1.3.3"
png = "0.17.7"